--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,24 @@
 plugins {
     id 'java'
 }
+
+sourceCompatibility = '11'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.jsoup:jsoup:1.16.1'
+    implementation 'org.apache.poi:poi:5.2.3'
+    implementation 'com.itextpdf:itext7-core:7.2.4'
+
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok'
+}
